# tools

./: .gitignore  AGENTS.md  README.md
.github/workflows/: test.yml
markdown-server/: CLAUDE.md  eslint.config.js  jest.config.js  jest.setup.js  knip.json  package-lock.json  package.json  playwright.config.js  server.js
markdown-server/__tests__/: commonmark.test.js  server.test.js
markdown-server/docs/: architecture.md  changelog.md  example.md  getting-started.md
markdown-server/e2e/: comments.spec.js  copy-md.spec.js  dark-mode.spec.js  fixtures.js  mermaid.spec.js  recent-files.spec.js  xss.spec.js
markdown-server/lib/: comments.js  handler.js  renderer.js
markdown-viewer/: .gitignore  README.md  package-lock.json  package.json  playwright.config.js
markdown-viewer/src-tauri/: Cargo.toml  tauri.conf.json
markdown-viewer/src-tauri/capabilities/: default.json
markdown-viewer/src-tauri/src/: commands.rs  comment_engine.rs  file_watcher.rs  lib.rs  state.rs
obsidian-to-article/: .env.example  .gitignore  README.md  contentValidator.js  geminiApiService.js  geminiService.js  index.js  jest.config.js  jest.setup.js  llmService.js  llmServiceFactory.js  logger.js  mockLlmService.js  ollamaService.js  openrouterService.js  package-lock.json  package.json  setup.js  twitterService.js  utils.js
obsidian-todo-archive/: .env.example  .gitignore  README.md  package-lock.json  package.json
obsidian-url-extractor/: .env.example  .gitignore  README.md  index.js  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
(+57 files in other folders)
